# git-staircase

./: .codegraph  .gitignore  Cargo.toml  file.txt  rewrite_memoizer.py  scratch.rs  spec-addendum-canonical-implicit-discovery.md  spec-addendum-clarifications.md  spec-addendum-github.md  spec-addendum-implicit-archive.md  spec-addendum-integration-contexts.md  spec-addendum-naming.md  spec-addendum-persistent-staircase-user-metadata-archival-lifecycle.md.md  spec-addendum-sequential-branch-naming.md  spec-addendum-workspaces.md  spec-addendum-worktree-drafts-index-state-materialization.md  spec-adendum-implicit-staircases.md  spec-gerrit-provider.md  spec-github-provider.md  spec-implementation-decisions.md  spec-monorepo-worktree.md  spec-repo-provider.md  spec.md
.agents/: AGENTS.md
.cargo/: config.toml
src/: core.rs  error.rs  git.rs  lib.rs  main.rs  memoization.rs  model.rs  presentation.rs  presentation_test.rs  process.rs
tests/: CONFORMANCE.md  adopt_selector_test.rs  ambiguity_test.rs  canonical_descriptor_test.rs  cli_error_consistency_test.rs  cli_unification_test.rs  conformance_adoption.rs  conformance_core_journeys.rs  conformance_corner_cases.rs  conformance_gerrit_journeys.rs  core_foundation_test.rs  discover_spec_test.rs  early_parsing_error_test.rs  editor_test.rs  error_format_test.rs  error_presentation_test.rs  git_command_test.rs  git_resolution_test.rs  git_test.rs  github_clash_test.rs  identity_test.rs  implicit_test.rs  inspection_test.rs  integration_test.rs  integration_tests.rs  local_journeys_test.rs  memoization_helper_test.rs  (+150 more)
(+241 files in other folders)
