[package]
autotests = false
name = "git-staircase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
zip = "8.6.0"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
